<resources>
    <string name="app_name">DCWSample</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="CF">Codice Fiscale</string>
    <string name="PIN">PIN</string>
    <string name="Password">Password</string>
    <string name="PIVA">Identificatico Fiscale</string>
    <string name="apikey">Chiave API</string>
    <string name="login">Login ADE</string>
    <string name="resultDCW">Risposta servizio DCW</string>
</resources>